# PocketChinese

./: .gitignore  build.gradle  settings.gradle
app/: .gitignore  build.gradle
app/src/cpp/: CMakeLists.txt  native_search.cpp  native_search.h
app/src/cpp/prefixsearch/: CMakeLists.txt  DecodingException.cpp  DecodingException.h  Distanse.cpp  Distanse.h  EngineFacade.cpp  EngineFacade.h  PrefixNode.cpp  PrefixNode.h  PrefixTree.cpp  PrefixTree.h  SearchEng.cpp  SearchEng.h  SentenseExtractor.cpp  SentenseExtractor.h  Utils.cpp  Utils.h  WordIndexer.cpp  WordIndexer.h  WordStr.h
app/src/main/: AndroidManifest.xml
app/src/main/assets/: dictionary_0.0.1.csv  listsinfo.json
app/src/main/assets/assets_dark/: appColors.css
app/src/main/assets/assets_def/: appColors.css
app/src/main/assets/dictres/: chinese.res  n1chinese.res  n2chinese.res  pinyinWords.res  russian.res  russianWords.res
app/src/main/assets/grammar/: grammarinfo.json
app/src/main/assets/suggest/: ListsInfo.json  classifiers.json  hsk1.json  hsk2.json  hsk3.json  hsk4.json  hsk5.json  hsk6.json  listsInfo.json
app/src/main/assets/www/: howToRadicals.html
app/src/main/res/color/: background_color.xml  button_background_on_primary.xml  button_background_surface.xml  button_ripple_surface.xml  button_stroke_on_primary.xml  button_stroke_surface.xml  check_box_on_primary.xml  chip_background.xml  chip_background_on_primary.xml  chip_ripple_on_primary.xml  chip_stroke.xml  chip_text_on_primary.xml  color_on_primary_20.xml  ship_stroke_on_primary.xml  (+2 more)
gradle/wrapper/: gradle-wrapper.properties
(+864 files in other folders)
